--- a/.github/workflows/reusable-lambda-deploy.yml
+++ b/.github/workflows/reusable-lambda-deploy.yml
@@ -27,8 +27,12 @@ on:
                 required: true
                 type: string
             lambda_role_name:
-                required: true
+                required: false
                 type: string
+            lambda_environment:
+                required: false
+                type: string
+                default: ''
 
 jobs:
     deploy:
@@ -58,6 +62,7 @@ jobs:
 
         - name: Configure AWS Credentials
           uses: aws-actions/configure-aws-credentials@v5.1.0
+          if: ${{ inputs.lambda_role_name != '' }}
           with:
             role-to-assume: ${{ secrets[inputs.lambda_role_name] }}
             aws-region: ${{ inputs.aws_region }}
@@ -72,3 +77,4 @@ jobs:
             runtime: ${{ inputs.lambda_runtime}}
             timeout: ${{ inputs.lambda_timeout }}
             zip_file: ./artifacts/${{ github.repository }}/${{ github.sha }}.zip
+            environment: ${{ inputs.lambda_environment }}
