--- a/.github/workflows/reusable-lambda-deploy.yml
+++ b/.github/workflows/reusable-lambda-deploy.yml
@@ -71,6 +71,8 @@ jobs:
           if: github.ref == 'refs/heads/main'
           uses: appleboy/lambda-action@v0.2.0
           with:
+            aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+            aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
             aws_region: ${{ inputs.aws_region }}
             description: ${{ inputs.lambda_description }}
             function_name: ${{ inputs.lambda_function_name }}
